# ChangeLog for sys-power/powertop
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.25 2009/04/04 02:39:04 gengor Exp $

  04 Apr 2009; Gordon Malm <gengor@gentoo.org> powertop-1.7.ebuild,
  powertop-1.8.ebuild, powertop-1.9.ebuild, -powertop-1.10.ebuild,
  powertop-1.11.ebuild:
  Remove problematic version and make repoman happy, bug #236372.

*powertop-1.11 (01 Mar 2009)

  01 Mar 2009; Olivier Crête <tester@gentoo.org> +powertop-1.11.ebuild:
  Version bump, bug #254678

*powertop-1.10 (31 Aug 2008)

  31 Aug 2008; Peter Alfredsen <loki_val@gentoo.org> +powertop-1.10.ebuild:
  Bump wrt bug 226373

  16 Jan 2008; Ferris McCormick <fmccor@gentoo.org> powertop-1.9.ebuild:
  Sparc stable, Bug #202082 (although I am not sure it is meaningful on sparc,
  given the description).

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> powertop-1.9.ebuild:
  amd64 stable wrt #202082

  14 Dec 2007; nixnut <nixnut@gentoo.org> powertop-1.9.ebuild:
  Stable on ppc wrt bug 202082

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org> powertop-1.9.ebuild:
  stable x86, bug 202082

*powertop-1.9 (06 Nov 2007)

  06 Nov 2007; Stefan Schweizer <genstef@gentoo.org> +powertop-1.9.ebuild:
  version bump

*powertop-1.8 (30 Aug 2007)

  30 Aug 2007; Stefan Schweizer <genstef@gentoo.org> +powertop-1.8.ebuild:
  version bump

  16 Aug 2007; Christoph Mende <angelos@gentoo.org> powertop-1.7.ebuild:
  Stable on amd64 wrt bug #188590

  13 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> powertop-1.7.ebuild:
  Stable on sparc wrt #188590

  12 Aug 2007; Andrej Kacian <ticho@gentoo.org> powertop-1.7.ebuild:
  Stable on x86, bug #188590.

  04 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> powertop-1.7.ebuild:
  Keyworded ~sparc wrt #183769

*powertop-1.7 (19 Jun 2007)

  19 Jun 2007; Timothy Redaelli <drizzt@gentoo.org> -powertop-1.6.ebuild,
  +powertop-1.7.ebuild:
  New version.
  Authorized by genstef.
