@@ -1,4 +1,4 @@
 DIST powertop-1.11.tar.gz 73136 RMD160 be05916afbb808ae17f6becbef7d456a753bd652 SHA1 d1d71db9a0854fab51f295a87ec505d89e451de3 SHA256 70e7cc53e5fbade5e447bda9f0ca12f2153bf426e074dbac3a2e97adf46180f2
-EBUILD powertop-1.11.ebuild 1076 RMD160 666eb13c10fca6e32b53348490f4fb042ab2bf04 SHA1 84defc73a4b7e33c04ad4b61f2b1bd28b081caf4 SHA256 973725f591da8f9e497d6ee3c9bb0a861385af0f3e25c997804f2aa93d762b39
-MISC ChangeLog 3808 RMD160 834951c7c23e4381f8c516af1f4a87f11d04f22e SHA1 8dd5b7ceb94ab5a30f1d446a519699d549c6a85a SHA256 158383eee830982025c46fe3367f8d4a7abeae251e61325308b47f550d9b8916
+EBUILD powertop-1.11.ebuild 1096 RMD160 f66ca0670e15c787a2976aea52cf3b9e7229fd8f SHA1 e5a8d8539da7b9a04850b090fc006974d1e6091f SHA256 6882f63205b313ec3f3bb49eb38294ff541b5a8e485b9440ca9948249408a36a
+MISC ChangeLog 3934 RMD160 1d074fa5cd95dc23435a74ad54ec5d1384cd9eaf SHA1 d46454a8ffecb34ccacb24a6c64dc01c30a51f29 SHA256 741ece6aa32d2f4b428250f1d94cd0d46245b6bb69163728210fe29344f8dd90
 MISC metadata.xml 161 RMD160 a5e1f234c4886ff31d39f229a0cf30d0bfcea869 SHA1 3876fd42cd9e63a7edb04c5025d53d773aa80bc3 SHA256 838bd208a7f948ea9b4e2b8869464622bc64a2f02468de4c3d7f6c2530e28e89
